test/spec_vectors/call/fail/module_18.wat
(module (func $large-func (call 1012321300)))